--- a/app/package.json
+++ b/app/package.json
@@ -33,6 +33,8 @@
     "postcss": "^8.5.6",
     "react-router-dom": "^7.13.0",
     "tailwindcss": "^4.2.0",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "vite-plugin-pwa": "^1.2.0",
+    "workbox-window": "^7.4.0"
   }
 }
