--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -9,13 +9,13 @@
     "orientation": "portrait",
     "icons": [
         {
-            "src": "/vite.svg",
+            "src": "/logo.svg",
             "sizes": "192x192",
             "type": "image/svg+xml",
             "purpose": "any maskable"
         },
         {
-            "src": "/vite.svg",
+            "src": "/logo.svg",
             "sizes": "512x512",
             "type": "image/svg+xml",
             "purpose": "any maskable"
